--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-native-alert-manager",
   "version": "0.1.0",
   "description": "What is the description for the package?",
-  "main": "lib/commonjs/index.js",
+  "main": "lib/module/index.js",
   "types": "lib/typescript/src/index.d.ts",
   "exports": {
     ".": {
