--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "lib", // ✅ 改成 lib 而不是 lib/typescript
+    "outDir": "lib",
     "declaration": true,
     "emitDeclarationOnly": true,
     "skipLibCheck": true
