--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "react-native-alert-manager",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "What is the description for the package?",
   "main": "lib/module/index.js",
   "types": "lib/typescript/src/index.d.ts",
   "exports": {
     ".": {
-      "source": "./lib/typescript/src/index.d.ts",
       "types": "./lib/typescript/src/index.d.ts",
       "default": "./lib/module/index.js"
     },
@@ -47,7 +46,6 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^19.6.0",
     "@eslint/compat": "^1.2.7",
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.22.0",
@@ -58,7 +56,6 @@
     "@release-it/conventional-changelog": "^9.0.2",
     "@types/jest": "^29.5.5",
     "@types/react": "^19.0.12",
-    "commitlint": "^19.6.1",
     "del-cli": "^5.1.0",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
@@ -68,6 +65,7 @@
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-builder-bob": "^0.40.8",
+    "react-native-reanimated": "^3.18.0",
     "react-native-root-siblings": "^5.0.1",
     "release-it": "^17.10.0",
     "typescript": "^5.8.3"
@@ -87,11 +85,6 @@
     "modulePathIgnorePatterns": [
       "<rootDir>/example/node_modules",
       "<rootDir>/lib/"
-    ]
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
     ]
   },
   "release-it": {
