--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "lib",
+    "outDir": "lib/typescript",
     "declaration": true,
     "emitDeclarationOnly": true,
     "skipLibCheck": true
